@startuml

title __DB's Class Diagram__\n

  namespace com.jue.framework {
    namespace db {
      class com.jue.framework.db.CallRecord {
          {static} + CALL_STATUS_ANSWER : int
          {static} + CALL_STATUS_DIAL : int
          {static} + CALL_STATUS_UN_ANSWER : int
          {static} + MEDIA_TYPE_AUDIO : int
          {static} + MEDIA_TYPE_VIDEO : int
          - callStatus : int
          - callTime : long
          - mediaType : int
          - userId : String
          + getCallStatus()
          + getCallTime()
          + getMediaType()
          + getUserId()
          + setCallStatus()
          + setCallTime()
          + setMediaType()
          + setUserId()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace db {
      class com.jue.framework.db.LitePalHelper {
          {static} - mInstnce : LitePalHelper
          {static} + getInstance()
          + queryCallRecord()
          + queryNewFriend()
          + saveCallRecord()
          + saveNewFriend()
          + updateNewFriend()
          - LitePalHelper()
          - baseQuery()
          - baseSave()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace db {
      class com.jue.framework.db.NewFriend {
          - isAgree : int
          - msg : String
          - saveTime : long
          - userId : String
          + getId()
          + getIsAgree()
          + getMsg()
          + getSaveTime()
          + setId()
          + setIsAgree()
          + setMsg()
          + setSaveTime()
      }
    }
  }
  

  com.jue.framework.db.CallRecord -up-|> org.litepal.crud.LitePalSupport
  com.jue.framework.db.NewFriend -up-|> org.litepal.crud.LitePalSupport


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
